# WebScraper-DataAnalyzer

./: CMakeLists.txt  data_analyzer.cpp  data_analyzer.h  index.html  main.ccp  script.js  style.css  web_scraper.cpp  web_scrapper.h
